<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.progettolso.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_Cocktail"
        android:name="com.example.progettolso.ui.drinks.DrinksFragment"
        android:label="@string/menu_drinks"
        tools:layout="@layout/fragment_drinks" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.progettolso.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_slideshow" />
</navigation>