<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/fragment_cart"
    tools:context=".ui.slideshow.SlideshowFragment">

    <ScrollView
        android:id="@+id/scrollView_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="102dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                tools:visibility="invisible" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_slideshow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_slideshow_total"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:visibility="invisible"/>

                <TextView
                    android:id="@+id/totalItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/fragment_slideshow_totalItem"
                    android:textColor="#D61313"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvCustomerDetails"
                    android:layout_width="165dp"
                    android:layout_height="29dp"
                    android:layout_margin="10dp"
                    android:text="@string/fragment_slideshow_customerDetails"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView android:id="@+id/tvPickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/switchDelivery"
                    app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
                    android:text="@string/fragment_slideshow_tvPickup"
                    android:textColor="#9C27B0"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView android:id="@+id/tvDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/switchDelivery"
                    app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
                    android:text="@string/fragment_slideshow_tvDelivery"
                    android:textColor="#9C27B0"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switchDelivery"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_name"/>

                <EditText android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputName"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_address"
                    android:visibility="gone"/>

                <EditText android:id="@+id/inputCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputAddress"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_city"
                    android:visibility="gone"/>

                <EditText android:id="@+id/inputState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCity"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_state"
                    android:visibility="gone"/>

                <EditText android:id="@+id/inputZip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputState"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_zip"
                    android:inputType="number"
                    android:maxLength="5"
                    android:visibility="gone"/>

                <TextView android:id="@+id/tvCardDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputZip"
                    android:layout_margin="10dp"
                    android:text="@string/fragment_slideshow_cart_details"
                    android:textColor="@color/purple"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText android:id="@+id/inputCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardDetails"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_card_number"
                    android:inputType="number"
                    android:maxLength="16"/>

                <EditText android:id="@+id/inputCardExpiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCardNumber"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_card_expiry"
                    android:inputType="number"
                    android:maxLength="6"/>

                <EditText android:id="@+id/inputCardPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCardExpiry"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginBottom="05dp"
                    android:hint="@string/fragment_slideshow_card_pin"
                    android:inputType="number"
                    android:maxLength="3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/inputCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="05dp"
                android:layout_marginBottom="05dp"
                android:hint="@string/fragment_slideshow_cell"
                android:inputType="number"
                android:maxLength="10" />

            <TextView
                android:id="@+id/button_checkout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="@drawable/button_check_out"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/fragment_slideshow_button_checkout"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:gravity="center"
                tools:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_head"
        android:layout_width="378dp"
        android:layout_height="39dp"
        android:layout_marginTop="-110dp"
        android:layout_marginStart="14dp"
        android:text="@string/fragment_slideshow_not_login"
        android:textColor="#DF2214"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>