<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">

    <!-- TextView name app !-->

    <TextView
        android:id="@+id/activity_textView_nameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:clickable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/activity_textView_nomeApp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/activity_main_textView_app"
        android:layout_width="343dp"
        android:layout_height="189dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/activity_textView_app"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_textView_nameApp"
        app:layout_constraintVertical_bias="0.597"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="285dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_textView_nameApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_textView_nameApp"
        app:layout_constraintVertical_bias="0.821">

        <!-- Button "SingIn" !-->

        <Button
            android:id="@+id/activity_button_sign_in"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login"
            android:text="@string/activity_button_sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <!-- Button "SingUp" !-->
        <Button
            android:id="@+id/activity_button_sign_up"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_singup"
            android:text="@string/activity_button_sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <!-- Button "SingUp" !-->
        <Button
            android:id="@+id/activity_button_disconnect"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_disconnect"
            android:text="@string/activity_button_disconnect"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout >

