<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_connection"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">


        <!-- TextView name app !-->

    <TextView
        android:id="@+id/activity_main_textView_nameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/activity_textView_nomeApp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="371dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_textView_nameApp"
        app:layout_constraintVertical_bias="0.09">

        <!-- Address !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_connection_text_input_address_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_address"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_connection_text_input_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Port !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_connection_text_input_port_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/activity_port"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_connection_text_input_port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button "SingIn" !-->

        <Button
            android:id="@+id/button_conn"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/activity_button_connection"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="16sp"
            android:textStyle="normal"
            app:backgroundTint="#E987749E"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>